# python_dataflow_testing

./: .gitignore  astroid_util.py  cfg.py  combined_experiment_cli.py  config.py  coverage.py  coverage_w.py  create_module_cfg_wrapper.py  ctrl_flow.py  def_use.py  definition_use_pairs_2.py  draw.py  du_pairs.py  interprocedural.py  issues.txt  module_cfg.py  mutation_experiment.py  mutation_experiment_cli.py  my_manager.py  my_runner.py  new_def_use.py  persistance.py  pytest_collect_test_modules.py  pytest_failed_node_ids.py  read_trace_file.py  real_bugs_experiment.py  real_bugs_experiment_cli.py  reflection.py  remove_this_file.py  requirements.txt  test_manager.py  test_runner.py  thorough.py  tracer.py  try_dix.py  util.py  workaround.py
branch_coverage/: branch_coverage.py
core/: main.py
coverage_metrics/: all_c_all_p_uses_coverage.py  branch_coverage.py  coverage_interface.py  coverage_metric_enum.py  def_use_coverage.py  statement_coverage.py  util.py
cpp/: cpp_import.py  helpers.py
cpp/du_pairs/: .rendered.def_use_pairs_ext.cpp  CMakeLists.txt  def_use_pairs_ext.cpp  def_use_pairs_ext_bc.cpp
cpp/du_pairs/cppitertools/: .itertools.hpp.swp
cpp/matcher/: .rendered.matcher_ext.cpp  matcher_ext.cpp
dataflow/: c_and_p_uses.py  def_use.py  def_use_trace.py  inter_class.py  reaching_definitions.py
dataset/dictionary/: .gitignore
dataset/inter_method/: module.py
dataset/linked_list_clean/: setup.cfg
dataset/linked_list_mutmut/: .mutmut-cache
experiment/: collect_test_suite.py  cum_chart.py  cummulative_experiment.py  dataframe_type.py  dataset_mutation_experiment.py  dataset_real_bugs_experiment.py  dataset_visualization.py  download_and_install_repos.py  folders.py  mutation.py  mutation_experiment.py  repo_selection.py  suite_generator.py
experiment/core/: columns.py  combined_experiment.py  generic_experiment.py  mutation.py  mutation_experiment.py  real_bugs_experiment.py  visualization.py
experiment/dataset_experiments/: cumulative_experiment_avd_graphs.py  cumulative_experiment_graphs.py  cumulative_experiment_vda_graphs.py  cumulative_experiment_vda_graphs_error_bar.py  dataset_cumulative_experiment.py  dataset_mutation_experiment.py  dataset_real_bugs_experiment.py  repo_statistics.py
experiment/db_model/: repo.py
experiment/pydefects/: checkouts_robert.py  get_projects.py
experiment/suites/: collect_test_suite.py  collect_test_suite_augmented.py  suite_generator.py
experiment/test_suite/: collect_test_suite.py  suite_generator.py
experiment/visualization/: cum_chart.py  cum_chart_grouped.py  dataset_visualization.py  (+2 more)
graphs/: ast_create.py  create.py  draw.py  keys.py  super_cfg.py  util.py
model/: project.py  test_case.py
report/: report.py
test/: test_compile.py  test_compile_module.py  test_create_ast_cfg.py  test_definitions_uses.py  test_expand_method_cfg.py  test_graphs_create.py  test_merge_reports.py
tracing/: analizer.py  analizer2.py  index_factory.py  string_to_int_index.py  trace_reader.py  tracer.py  ttt.py
util/: astroid_util.py  cache.py  debug_print.py  find.py  misc.py  reflection.py
(+128 files in other folders)
